Fix spacing and remove borders

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ section .case {
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 10px;
+    gap: none;
 }
 
 .ops {
@@ -91,7 +91,6 @@ section .case {
 .case .fifth-row {
     width: 450px;
     border-radius: 25px;
-    border: 5px dotted white;
 }
 
 .case .screen {
